syntax = "proto3";

import "message/auth.proto";
import "message/register.proto";
import "message/login.proto";
import "message/get_account_info.proto";
import "message/set_account_info.proto";

package ourchat;

service OurChatService {
  rpc unregister(register.UnregisterRequest)
      returns (register.UnregisterResponse);

  rpc register(register.RegisterRequest) returns (register.RegisterResponse);

  rpc auth(auth.AuthRequest) returns (auth.AuthResponse);

  rpc login(login.LoginRequest) returns (login.LoginResponse);

  rpc get_info(get_info.GetAccountInfoRequest)
      returns (get_info.GetAccountInfoResponse);

  rpc set_self_info(set_info.SetSelfInfoRequest)
      returns (set_info.SetAccountInfoResponse);

  rpc set_friend_info(set_info.SetFriendInfoRequest)
      returns (set_info.SetAccountInfoResponse);
}